@@ -37,15 +37,18 @@ class CActiveFinder extends CComponent
 	private $_joinCount=0;
 	private $_joinTree;
 	private $_builder;
+	private $_criteria;  // the criteria generated via named scope
 
 	/**
 	 * Constructor.
 	 * A join tree is built up based on the declared relationships between active record classes.
 	 * @param CActiveRecord the model that initiates the active finding process
 	 * @param mixed the relation names to be actively looked for
+	 * @param CDbCriteria the criteria associated with the named scopes (since version 1.0.5)
 	 */
-	public function __construct($model,$with)
+	public function __construct($model,$with,$criteria=null)
 	{
+		$this->_criteria=$criteria;
 		$this->_builder=$model->getCommandBuilder();
 		$this->_joinTree=new CJoinElement($this,$model);
 		$this->buildJoinTree($this->_joinTree,$with);
@@ -70,6 +73,25 @@ class CActiveFinder extends CComponent
 		return $this;
 	}
 
+	private function query($criteria,$all=false)
+	{
+		if($this->_criteria!==null)
+		{
+			$this->_criteria->mergeWith($criteria);
+			$criteria=$this->_criteria;
+		}
+
+		$this->_joinTree->find($criteria);
+		$this->_joinTree->afterFind();
+
+		if($all)
+			return array_values($this->_joinTree->records);
+		else if(count($this->_joinTree->records))
+			return reset($this->_joinTree->records);
+		else
+			return null;
+	}
+
 	/**
 	 * This is the relational version of {@link CActiveRecord::find()}.
 	 */
@@ -77,12 +99,7 @@ class CActiveFinder extends CComponent
 	{
 		Yii::trace(get_class($this->_joinTree->model).'.find() eagerly','system.db.ar.CActiveRecord');
 		$criteria=$this->_builder->createCriteria($condition,$params);
-		$this->_joinTree->find($criteria);
-		$this->_joinTree->afterFind();
-		if(count($this->_joinTree->records))
-			return reset($this->_joinTree->records);
-		else
-			return null;
+		return $this->query($criteria);
 	}
 
 	/**
@@ -92,9 +109,7 @@ class CActiveFinder extends CComponent
 	{
 		Yii::trace(get_class($this->_joinTree->model).'.findAll() eagerly','system.db.ar.CActiveRecord');
 		$criteria=$this->_builder->createCriteria($condition,$params);
-		$this->_joinTree->find($criteria);
-		$this->_joinTree->afterFind();
-		return array_values($this->_joinTree->records);
+		return $this->query($criteria,true);
 	}
 
 	/**
@@ -104,12 +119,7 @@ class CActiveFinder extends CComponent
 	{
 		Yii::trace(get_class($this->_joinTree->model).'.findByPk() eagerly','system.db.ar.CActiveRecord');
 		$criteria=$this->_builder->createPkCriteria($this->_joinTree->model->getTableSchema(),$pk,$condition,$params);
-		$this->_joinTree->find($criteria);
-		$this->_joinTree->afterFind();
-		if(count($this->_joinTree->records))
-			return reset($this->_joinTree->records);
-		else
-			return null;
+		return $this->query($criteria);
 	}
 
 	/**
@@ -119,9 +129,7 @@ class CActiveFinder extends CComponent
 	{
 		Yii::trace(get_class($this->_joinTree->model).'.findAllByPk() eagerly','system.db.ar.CActiveRecord');
 		$criteria=$this->_builder->createPkCriteria($this->_joinTree->model->getTableSchema(),$pk,$condition,$params);
-		$this->_joinTree->find($criteria);
-		$this->_joinTree->afterFind();
-		return array_values($this->_joinTree->records);
+		return $this->query($criteria,true);
 	}
 
 	/**
@@ -131,12 +139,7 @@ class CActiveFinder extends CComponent
 	{
 		Yii::trace(get_class($this->_joinTree->model).'.findByAttributes() eagerly','system.db.ar.CActiveRecord');
 		$criteria=$this->_builder->createColumnCriteria($this->_joinTree->model->getTableSchema(),$attributes,$condition,$params);
-		$this->_joinTree->find($criteria);
-		$this->_joinTree->afterFind();
-		if(count($this->_joinTree->records))
-			return reset($this->_joinTree->records);
-		else
-			return null;
+		return $this->query($criteria);
 	}
 
 	/**
@@ -146,9 +149,7 @@ class CActiveFinder extends CComponent
 	{
 		Yii::trace(get_class($this->_joinTree->model).'.findAllByAttributes() eagerly','system.db.ar.CActiveRecord');
 		$criteria=$this->_builder->createColumnCriteria($this->_joinTree->model->getTableSchema(),$attributes,$condition,$params);
-		$this->_joinTree->find($criteria);
-		$this->_joinTree->afterFind();
-		return array_values($this->_joinTree->records);
+		return $this->query($criteria,true);
 	}
 
 	/**
@@ -191,6 +192,11 @@ class CActiveFinder extends CComponent
 	{
 		Yii::trace(get_class($this->_joinTree->model).'.count() eagerly','system.db.ar.CActiveRecord');
 		$criteria=$this->_builder->createCriteria($condition,$params);
+		if($this->_criteria!==null)
+		{
+			$this->_criteria->mergeWith($criteria);
+			$criteria=$this->_criteria;
+		}
 		return $this->_joinTree->count($criteria);
 	}
 
